# Builder

./: .gitignore  CMakeLists.txt
include/: BetterHtmlElement.h  HtmlElement.h  Person.h  PersonAddressBuilder.h  PersonBuilder.h  PersonJobBuilder.h
src/: BetterFluentBuilder.cpp  ComplexBuilder.cpp  FluentBuilder.cpp  GroovyBuilder.cpp  NoBuilder.cpp  Person.cpp  PersonBuilder.cpp  SimpleBuilder.cpp
